tests/test_assets/semantic/invalid/declarations/non_constant_initializer.cog
some_func::() -> i32 {
    return 1;
}

BAD_CALL :: some_func();