tests/test_assets/semantic/invalid/declarations/non_constant_initializer.expected
semantic error at line 5: expression is not a compile-time constant
1 semantic error generated.
